[tool.poetry]
name = "luna-mash"
version = "0.1.0"
description = ""
authors = ["Chris <tsudonymn@gmail.com>"]
readme = "README.md"
packages = [{include = "luna_mash"}]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

